# rpi-stock-checker

./: Cargo.toml  LICENSE  README.md  test_rss.xml
src/: application.rs  lib.rs  main.rs
tests/: integration_test.rs
