[package]
authors = ["Aven Arlington <aven.arlington@gmail.com>"]
name = "rpi-stock-checker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple RSS stock checker for the Raspberry Pi 5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"

[dependencies.windows]
version = "*"
features = [
   "Foundation_Collections",
   "Web_Syndication",
   "UI_Notifications",
   "Data_Xml_Dom",
]
